# side-projects

./: README.md
ai_project/: .env.example  .gitignore  README.md
ai_project/.github/workflows/: ci.yml
ai_project/ai_project/: Dockerfile  pyproject.toml
ai_project/ai_project/scripts/: train.py
ai_project/ai_project/src/ai_project/: config.py  model_utils.py
ai_project/ai_project/tests/: test_smoke.py
ai_project/app/: app.py
ai_project/scripts/: infer.py
ai_project/src/ai_project/: data_utils.py  logging_utils.py
ytDownloader/: ytDownloader.py  ytDownloader.spec
